v.0.9.0 new functions finished: WeighFood, with pictures. ChartPage working
Database: added to table Parameters fields that remember the values of last weighing operation
ContainersPage: big changes, final version
  connected the photo system's page directly to this page.
  TakePicturePage eliminated.
  Clipping the photo of the container to a square shape
WeighFoodPage: finished the behavior, calculations verified
Orientation: blocked to vertical every page except ChartPage

--- a/GlucoMan.Maui/FoodsPage.xaml
+++ b/GlucoMan.Maui/FoodsPage.xaml
@@ -51,13 +51,21 @@
             <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Margin="5,0,0,0"
                 Text="Description of food" HorizontalTextAlignment="Start" VerticalTextAlignment="End"/>
 
-            <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" 
-                x:Name="txtDescription" 
+            <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" 
+                    x:Name="txtDescription" 
                    BackgroundColor="LightGreen" TextColor="Black"
-                ToolTipProperties.Text="Description: longer description of this food" Margin="0"
-                Keyboard="Text" TextChanged="txtDescription_TextChanged"
-                HorizontalTextAlignment="Start" FontSize="Micro"
-                Text="{Binding Description}"/>
+                    ToolTipProperties.Text="Description: longer description of this food" Margin="0"
+                    Keyboard="Text" TextChanged="txtDescription_TextChanged"
+                    HorizontalTextAlignment="Start" FontSize="Micro"
+                    Text="{Binding Description}"/>
+  
+            <Button Grid.Row="4" Grid.Column="3" x:Name="btnBack" 
+                    Margin="1"
+                    HeightRequest="55"
+                    VerticalOptions="Start"
+                    ImageSource="escape.png"
+                    ToolTipProperties.Text="Back: return to the calling page without saving changes"
+                    Clicked="btnBack_Click"/>
 
             <Label Grid.Row="5" Grid.Column="0" Text="CHO %" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
